including solutions for chap 2,3

--- a/talkwall.html
+++ b/talkwall.html
@@ -307,7 +307,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="topic02-introduction-to-sets-and-types/talk-4/d-solutions-sets-and-basic-notation.png">
+        <img class="ui bordered rounded image" src="topic02-introduction-to-sets-and-types/talk-4/d-solutions-sets-and-basic-notation.jpg">
       </div>
 
       <div class="center aligned content">
@@ -427,7 +427,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="topic03-introduction -to-schemas/talk-4/d-solutions-introduction-to-schemas.png">
+        <img class="ui bordered rounded image" src="topic03-introduction -to-schemas/talk-4/d-solutions-introduction-to-schemas.jpg">
       </div>
 
       <div class="center aligned content">
@@ -478,22 +478,21 @@ figcaption
                 
 
   
-     <a class="ui raised link card" href="topic04-predicates/talk-2/b-slides-predicates.pdf" target="_blank">
+     <a class="ui raised link card" href="undefined//error: missing talk" target="_blank">
   
 
       <div class="center aligned content">
         <div class="right floated meta"><i class="huge object group icon"></i></div>
-        <div class="header"> Predicates - Slides</div>
+        <div class="header"> </div>
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="topic04-predicates/talk-2/b-slides-predicates.png">
+        <img class="ui bordered rounded image" src="undefined//">
       </div>
 
       <div class="center aligned content">
         <div class="description">
-          <p>Universal, existential quantification, more on set comprehension.</p>
-
+          
         </div>
       </div>
 
