--- a/topic02-introduction-to-sets-and-types/indexmoodle.html
+++ b/topic02-introduction-to-sets-and-types/indexmoodle.html
@@ -147,7 +147,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic02-introduction-to-sets-and-types/talk-4/d-solutions-sets-and-basic-notation.png">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic02-introduction-to-sets-and-types/talk-4/d-solutions-sets-and-basic-notation.jpg">
       </div>
 
       <div class="center aligned content">
