--- a/topic03-introduction -to-schemas/index.html
+++ b/topic03-introduction -to-schemas/index.html
@@ -253,7 +253,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="talk-4/d-solutions-introduction-to-schemas.png">
+        <img class="ui bordered rounded image" src="talk-4/d-solutions-introduction-to-schemas.jpg">
       </div>
 
       <div class="center aligned content">
