--- a/topic03-introduction -to-schemas/indexmoodle.html
+++ b/topic03-introduction -to-schemas/indexmoodle.html
@@ -147,7 +147,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic03-introduction -to-schemas/talk-4/d-solutions-introduction-to-schemas.png">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic03-introduction -to-schemas/talk-4/d-solutions-introduction-to-schemas.jpg">
       </div>
 
       <div class="center aligned content">
