--- a/topic04-predicates/indexmoodle.html
+++ b/topic04-predicates/indexmoodle.html
@@ -78,22 +78,21 @@ figcaption
       
 
   
-     <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17/topic04-predicates/talk-2/b-slides-predicates.pdf" target="_blank">
+     <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17/topic04-predicates//error: missing talk" target="_blank">
   
 
       <div class="center aligned content">
         <div class="right floated meta"><i class="huge object group icon"></i></div>
-        <div class="header"> Predicates - Slides</div>
+        <div class="header"> </div>
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic04-predicates/talk-2/b-slides-predicates.png">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic04-predicates//">
       </div>
 
       <div class="center aligned content">
         <div class="description">
-          <p>Universal, existential quantification, more on set comprehension.</p>
-
+          
         </div>
       </div>
 
