--- a/topic02-introduction-to-sets-and-types/index.html
+++ b/topic02-introduction-to-sets-and-types/index.html
@@ -253,7 +253,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="talk-4/d-solutions-sets-and-basic-notation.png">
+        <img class="ui bordered rounded image" src="talk-4/d-solutions-sets-and-basic-notation.jpg">
       </div>
 
       <div class="center aligned content">
