adding predicates solutions

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ figcaption
       </div>
       
       <div class="menu">
-        <a class="item" href="topic04-predicates//error: missing talk">
-          </a>
+        <a class="item" href="topic04-predicates/talk-2/b-slides-predicates.pdf">
+          Predicates - Slides</a>
       </div>
       
       <div class="menu">
