--- a/talkwall.html
+++ b/talkwall.html
@@ -478,21 +478,22 @@ figcaption
                 
 
   
-     <a class="ui raised link card" href="undefined//error: missing talk" target="_blank">
+     <a class="ui raised link card" href="topic04-predicates/talk-2/b-slides-predicates.pdf" target="_blank">
   
 
       <div class="center aligned content">
         <div class="right floated meta"><i class="huge object group icon"></i></div>
-        <div class="header"> </div>
+        <div class="header"> Predicates - Slides</div>
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="undefined//">
+        <img class="ui bordered rounded image" src="topic04-predicates/talk-2/b-slides-predicates.png">
       </div>
 
       <div class="center aligned content">
         <div class="description">
-          
+          <p>Universal, existential quantification, more on set comprehension.</p>
+
         </div>
       </div>
 
@@ -546,7 +547,7 @@ figcaption
       </div>
 
       <div class="image">
-        <img class="ui bordered rounded image" src="topic04-predicates/talk-4/d-solutions-predicates.png">
+        <img class="ui bordered rounded image" src="topic04-predicates/talk-4/d-solutions-predicates.jpg">
       </div>
 
       <div class="center aligned content">
