--- a/topic04-predicates/ajaxlabel.html
+++ b/topic04-predicates/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17//topic04-predicates/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17///topic04-predicates/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
