--- a/topic06-functions/ajaxlabel.html
+++ b/topic06-functions/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17//topic06-functions/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17///topic06-functions/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
