Publishing relations solutions

--- a/talkwall.html
+++ b/talkwall.html
@@ -536,21 +536,10 @@ figcaption
 
   <div class="ui raised link card">
 
-<<<<<<< HEAD
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
       <div class="header"> Predicates - Slides</div>
     </div>
-=======
-      <div class="center aligned content">
-        <div class="right floated meta"><i class="huge object group icon"></i></div>
-<<<<<<< HEAD
-        <div class="header"> Predicates - Slides</div>
-=======
-        <div class="header"> Predicates - Slides</div>
->>>>>>> 65aebf72c6b451d7f812dddf67a601b56f199ddd
-      </div>
->>>>>>> c6c26fdce475f03f612b2d5375216011c001eff9
 
     
     <a class="ui raised link card" href="topic04-predicates/talk-2/b-slides-predicates.pdf" target="_blank">
@@ -765,7 +754,7 @@ figcaption
     <a class="ui raised link card" href="topic05-relations/talk-4/d-solutions-relations.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="topic05-relations/talk-4/d-solutions-relations.png">
+        <img class="ui bordered rounded image" src="topic05-relations/talk-4/d-solutions-relations.jpg">
       </div>
     </a>
 
