--- a/topic05-relations/index.html
+++ b/topic05-relations/index.html
@@ -270,7 +270,7 @@ figcaption
     <a class="ui raised link card" href="talk-4/d-solutions-relations.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="talk-4/d-solutions-relations.png">
+        <img class="ui bordered rounded image" src="talk-4/d-solutions-relations.jpg">
       </div>
     </a>
 
