--- a/topic05-relations/indexmoodle.html
+++ b/topic05-relations/indexmoodle.html
@@ -162,7 +162,7 @@ figcaption
     <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17//topic05-relations/talk-4/d-solutions-relations.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17//topic05-relations/talk-4/d-solutions-relations.png">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17//topic05-relations/talk-4/d-solutions-relations.jpg">
       </div>
     </a>
 
