Updating with typos

--- a/topic02-introduction-to-sets-and-types/ajaxlabel.html
+++ b/topic02-introduction-to-sets-and-types/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17///topic02-introduction-to-sets-and-types/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17//topic02-introduction-to-sets-and-types/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
