--- a/topic05-relations/ajaxlabel.html
+++ b/topic05-relations/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17///topic05-relations/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17//topic05-relations/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
