--- a/topic03-introduction -to-schemas/ajaxlabel.html
+++ b/topic03-introduction -to-schemas/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17///topic03-introduction -to-schemas/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17//topic03-introduction -to-schemas/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
