updating interesting systems

--- a/talkwall.html
+++ b/talkwall.html
@@ -1032,7 +1032,7 @@ figcaption
     <a class="ui raised link card" href="topic07-sequences/talk-4/d-solutions-sequences.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="topic07-sequences/talk-4/d-solutions-sequences.png">
+        <img class="ui bordered rounded image" src="topic07-sequences/talk-4/d-solutions-sequences.jpg">
       </div>
     </a>
 
@@ -1060,7 +1060,7 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> Interesting Systems</div>
+      <div class="header"> Interesting Systems</div>
     </div>
 
     
