--- a/topic08-interesting-systems/ajaxlabel.html
+++ b/topic08-interesting-systems/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17///topic08-interesting-systems/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17//topic08-interesting-systems/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
