--- a/topic08-interesting-systems/indexmoodle.html
+++ b/topic08-interesting-systems/indexmoodle.html
@@ -51,14 +51,14 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> Interesting Systems</div>
+      <div class="header"> Interesting Systems</div>
     </div>
 
     
-    <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17//topic08-interesting-systems/talk/a-interesting-systems.pdf" target="_blank">
+    <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17/topic08-interesting-systems/talk/a-interesting-systems.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17//topic08-interesting-systems/talk/a-interesting-systems.gif">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic08-interesting-systems/talk/a-interesting-systems.gif">
       </div>
     </a>
 
